@@ -461,9 +461,9 @@ else {
 
   $message_body = $plugin['body'];
 
-  // compose format=flowed content if enabled and not a reply message
-  if (empty($_SESSION['compose']['reply_msgid']) && ($flowed = $RCMAIL->config->get('send_format_flowed', true)))
-    $message_body = rcube_message::format_flowed($message_body, $LINE_LENGTH);
+  // compose format=flowed content if enabled
+  if ($flowed = $RCMAIL->config->get('send_format_flowed', true))
+    $message_body = rcube_message::format_flowed($message_body, min($LINE_LENGTH+2, 79));
   else
     $message_body = rc_wordwrap($message_body, $LINE_LENGTH, "\r\n");
 
